# papermint

./: .gitignore  app.py  app9.py  main.py  pyproject.toml
mint/: converter.py  download_papers.py  downloader.py  extract_captions.py  extract_equations.py  extractor.py  filter_images.py  generate_metadata.py  generator.py  latex_template.py  pandoc_utils.py  requirements_check.py
