[tool.poetry]
name = "papermint"
version = "0.1.0"
description = ""
authors = ["goldenglorys <olusolagloryolamide@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.38.0"
pandoc = "^2.4"
jq = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
